@@ -372,3 +372,5 @@ power distribution and gsl_multifit_linear_est
 * Charles Karney <ckarney@sarnoff.com> added Leva bounds to gaussian ratio method generator
 
 * Torquil Sorenson <torquil@gmail.com> documentation bug fixes for FFTs
+
+* Yajun Wang <yalding@cs.ust.hk> - bug report for multifit n<p
