@@ -1,3 +1,11 @@
+2006-03-30  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fsolver.c (gsl_multifit_fsolver_alloc): minpack algorithms
+	require n>=p, added check
+
+	* fdfsolver.c (gsl_multifit_fdfsolver_alloc): minpack algorithms
+	require n>=p, added check
+
 2006-02-20  Brian Gough  <bjg@network-theory.co.uk>
 
 	* multilinear.c (gsl_multifit_linear_est): added linear estimator
